<?xml version="1.0"?>
<package format="2">
  <name>rqt_gauges_2</name>
  <version>0.0.1</version>
  <description>Visualization plugin for several sensors.</description>

  <maintainer email="eloy.briceno@ekumenlabs.com">Eloy Briceno</maintainer>

  <license file="LICENSE">BSD Clause 3</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>qt_gui</exec_depend>
  <exec_depend>qt_gui_py_common</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
    <build_type>ament_python</build_type>
  </export>
</package>
