<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_gauges</name>
  <version>0.0.1</version>
  <description>Visualization plugin for several sensors.</description>

  <maintainer email="eloy.briceno@ekumenlabs.com">Eloy Bricneo</maintainer>

  <license file="LICENSE">BSD Clause 3</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>qt_gui</exec_depend>
  <exec_depend>qt_gui_py_common</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_xmllint</test_depend>

  <export>
    <architecture_independent/>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
